[tool.poetry]
name = "ai-bot-sell"
version = "0.1.0"
description = "Telegram bot for selling AI solutions"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0"
SQLAlchemy = "^2.0"
psycopg2-binary = "^2.9"
alembic = "^1.12"
python-dotenv = "^1.0"
openai = "^1.3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.9"
isort = "^5.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
